goals without score tracking do not show progress section. goal wizard asks if there is a score to track.  Firefox presnets beautifully.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,9 @@
 
 en:
   hello: "Hello world"
+
+  helpers:
+    label:
+      goal:
+        target_label: "Score Label (BPM, points, etc)"
+        target_score: "Target Score"
